Sophie | Ensure gap between profile cards

--- a/src/components/about/Profiles.scss
+++ b/src/components/about/Profiles.scss
@@ -4,6 +4,7 @@ $card-border-radius: 0.75rem;
 
 #about > .body {
   width: 100%;
+  padding-top: 2rem;
 
   display: flex;
   flex-flow: wrap;
@@ -14,7 +15,7 @@ $card-border-radius: 0.75rem;
 /* ------- COMMON STYLING ------- */
 #about > .body > .card {
   background: $card-bg;
-  margin: 2rem 0;
+  margin: 2rem 0.5rem;
   border-radius: $card-border-radius;
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.3), 0 16px 20px 0 rgba(0, 0, 0, 0.14);
 
